Bug 564580: made Java11 compatible
Change-Id: Ia5ce65b1502fa2b5a6599c50e1f78d2ec1ace212
Signed-off-by: Leif Geiger <leif.geiger@yatta.de>